Fri Feb  3 07:57:31 1995  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in: Use politically correct name of AC_CHECK_SIZEOF
		instead of AC_SIZEOF_TYPE.

        * configure.in:
        * wordsize.h: Don't use BITS16, BITS32, etc. anymore.  Use
                autoconf's SIZEOF_INT and SIZEOF_LONG definitions to make
                things work.

Mon Jan 30 15:43:19 1995  Chris Provenzano  (proven@mit.edu)

	* func-proto.h Added krb5_keytype arg to rb5_rdreq_key_proc.

	* func-proto.h (krb5_send_tgs()) Changed krb5_enctype arg to
		krb5_enctype *, a NULL terminated array of encryption types.

	* func-proto.h Added prototypes for krb5_get_for_creds(),
		krb5_set_default_in_tkt_etypes(), and
		krb5_get_default_in_tkt_etypes().
	
	* krb5.h Added fields to krb5_context to support default etypes.

Fri Jan 27 00:56:12 1995  Chris Provenzano  (proven@mit.edu)

	* func-proto.h (krb5_kt_read_service_key()) Added krb5_keytype arg.
	* keytab.h (krb5_kt_get_entry()) Add krb5_keytype arg.

Fri Jan 27 00:56:12 1995  Chris Provenzano  (proven@mit.edu)

	* base-defs.h Typedef krb5_boolean, krb5_msgtype, krb5_kvno,
                krb5_addrtype, krb5_keytyp, krb5_enctype, krb5_cksumtype,
                and krb5_authdatatype as unsigned int.
	* kdb_dbm.h krb5_dbm_db_set_lockmode(), krb5_dbm_db_set_nonblocking()
		Fix prototypes to use krb5_boolean and not int.
	* kdb.h krb5_db_set_lockmode(), krb5_db_set_nonblocking()
		Fix prototypes to use krb5_boolean and not int.

Wed Jan 25 19:26:57 1995  John Gilmore  (gnu at toad.com)

	* crc-32.h:  Move to lib/crypto/crc32; only gets local use.
	* rsa-md4.h:  Move to lib/crypto/md4; only gets local use.

Wed Jan 25 20:01:36 1995  Mark Eichin  (eichin@cygnus.com)

	* configure.in: rewrote remaining tests to use AC_TRY_COMPILE and
	caching. Added cross-compile case for ANSI stdio test.

Wed Jan 25 17:50:35 1995  Chris Provenzano  (proven@mit.edu)

	* Removed narrow.h and widen.h

Wed Jan 25 17:07:17 1995  Chris Provenzano  (proven@mit.edu)
